--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Site settings
 title: Pursue
+author: Pursue
 email: 348564768@qq.com
 description: > # this blog is ceated by Pursue whose usuarl accout is kkkkkkxiaofei.
 baseurl: "" # the subpath of your site, e.g. /blog/
@@ -27,13 +28,20 @@ js_links:  [
              '/lib/jquery-tmpl.js',
              '/lib/knockout-3.3.0.js',
              '/lib/underscore.js',
-             '/lib/bootstrap.js',
-             '/model/page.js',
-             '/model/movie.js',
-             '/model/photo.js',
-             '/model/article.js',
-             '/model/music.js',
-             '/script/index.js'
+             '/lib/bootstrap.js'
+             # '/model/page.js',
+             # '/model/movie.js',
+             # '/model/photo.js',
+             # '/model/article.js',
+             # '/model/music.js',
+             # '/script/index.js'
+           ]
+post_css_links: [
+             '/css/main.css',
+             '/css/bootstrap.css',
+             '/css/markdown.css'
+           ]
+post_js_links:  [
            ]
 
 
