--- a/_config.yml
+++ b/_config.yml
@@ -28,13 +28,13 @@ js_links:  [
              '/lib/jquery-tmpl.js',
              '/lib/knockout-3.3.0.js',
              '/lib/underscore.js',
-             '/lib/bootstrap.js'
+             '/lib/bootstrap.js',
              # '/model/page.js',
              # '/model/movie.js',
              # '/model/photo.js',
              # '/model/article.js',
              # '/model/music.js',
-             # '/script/index.js'
+             '/script/index.js'
            ]
 post_css_links: [
              '/css/main.css',
