--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Pursue
 author: Pursue
 email: 348564768@qq.com
 description: > # this blog is ceated by Pursue whose usuarl accout is kkkkkkxiaofei.
-baseurl: "/kkkkkkxiaofei" # the subpath of your site, e.g. /blog/
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://github.com/kkkkkxiaofei" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  kkkkkxiaofei
